--- a/sirun/lab1/index.html
+++ b/sirun/lab1/index.html
@@ -16,7 +16,7 @@
     </u>
     <hr>
     <h3>โปรโมชั่น</h3>
-    <b>สินค้ามีให้เลืแกมากมายหลายอย่าง</b>
+    <b>สินค้ามีให้เลืฮกมากมายหลายอย่าง</b>
     <p>เข้ามาช้อปปิ้งที่ Nike วันนี้และรับส่วนลด <s>10%</s> สำหรับสินค้าทุกชิ้น!</p>
     <a href="https://www.nike.com/" target="_blank">เยี่ยมชมเว็บไซต์</a>
   </body>
