--- a/lab3/clone-lazada.html
+++ b/lab3/clone-lazada.html
@@ -3,28 +3,111 @@
 <head>
 	<title>lazada</title>
 	<style>
-		body{
-			background-color: gray;
+		.header{
+			width: 100%;
+			height: 50px;
+			display: flex;
+			margin-left: 10px;
 		}
+		.justforyou{
+			width: 100%;
+            height: 70px;
+            display: flex;
+            justify-content: center;
+			background-color: rgb(233, 228, 228);
+		}
+		.container {
+            width: 100%;
+            height: 300px;
+            display: flex;
+            justify-content: center;
+			background-color: rgb(233, 228, 228);
+        }
 		.box {
+			border-radius: 8px;
+			width: 150px;
+			height: 250px;
+			background-color: #ffffff;
+			margin-right: 10px;
 			display: inline-block;
-			width: 180px;
-			height: 280px;
-			background-color: #f2f2f2;
-			margin-right: 20px;
 		}
+		.box img{
+			max-width: 100%;
+            max-height: 100%;
+			vertical-align: middle;
+			border-top-right-radius: 8px;
+			border-top-left-radius: 8px;
+		}
+		p{
+			color: #f90000;
+			margin-left: 8px;
+			font-size: 20px;
+			margin-bottom: 0px;
+			margin-top: 20px;
+		}
+		b{
+			font-size: 14px;
+			margin-left: 8px;
+		}
+		s{
+			margin-left: 8px;
+			color: grey;
+		}
+
+		
 	</style>
 </head>
 <body>
+	<div class="header">
+		<img src="lazada.png" alt="โลโก้ Lazada">
+	</div>
+
+	<div class="justforyou">
+		<img src="justforyou.png" alt="โลโก้ Lazada">
+	</div>
+
+	<div class="container">
+		
+		<div class="box">
+			<img src="nay.jpg" alt="รูปสินค้า">
+		    <b>ยำยำยำยำ</b>
+			<p>฿15</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	    <div class="box">
+			<img src="nay.jpg" alt="รูปสินค้า">
+		    <b>ยำยำยำยำ</b>
+			<p>฿15</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+		<div class="box">
+			<img src="nay.jpg" alt="รูปสินค้า">
+		    <b>ยำยำยำยำ</b>
+			<p>฿15</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	    <div class="box">
+			<img src="nay.jpg" alt="รูปสินค้า">
+		    <b>ยำยำยำยำ</b>
+			<p>฿15</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+		<div class="box">
+			<img src="nay.jpg" alt="รูปสินค้า">
+		    <b>ยำยำยำยำ</b>
+			<p>฿15</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	    <div class="box">
+			<img src="nay.jpg" alt="รูปสินค้า">
+		    <b>ยำยำยำยำ</b>
+			<p>฿15</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	 
+	</div>
 	
-	<div class="box"></div>
-	<div class="box"></div>
-	<div class="box"></div>
-	<div class="box"></div>
-	<div class="box"></div>
-	<div class="box"></div>
-	<div class="box"></div>
-	<div class="box"></div>
+	
 	
 	
 </body>
