--- a/lab3/clone-lazada.html
+++ b/lab3/clone-lazada.html
@@ -32,6 +32,7 @@
 			display: inline-block;
 		}
 		.box img{
+			
 			max-width: 100%;
             max-height: 100%;
 			vertical-align: middle;
@@ -69,33 +70,33 @@
 	<div class="container">
 		
 		<div class="box">
-			<img src="nay.jpg" alt="รูปสินค้า">
-		    <b>ยำยำยำยำ</b>
-			<p>฿15</p>
+			<img src="blue.jpg" alt="รูปสินค้า">
+		    <b>BLUE SENTAI</b>
+			<p>฿98</p>
 			<s>฿1,000</s> -99.99%
 		</div>
 	    <div class="box">
-			<img src="nay.jpg" alt="รูปสินค้า">
-		    <b>ยำยำยำยำ</b>
-			<p>฿15</p>
+			<img src="green.jpg" alt="รูปสินค้า">
+		    <b>GREEN SENTAI</b>
+			<p>฿477</p>
 			<s>฿1,000</s> -99.99%
 		</div>
 		<div class="box">
-			<img src="nay.jpg" alt="รูปสินค้า">
-		    <b>ยำยำยำยำ</b>
-			<p>฿15</p>
+			<img src="red.jpg" alt="รูปสินค้า">
+		    <b>RED SENTAI</b>
+			<p>฿995</p>
 			<s>฿1,000</s> -99.99%
 		</div>
 	    <div class="box">
-			<img src="nay.jpg" alt="รูปสินค้า">
-		    <b>ยำยำยำยำ</b>
-			<p>฿15</p>
+			<img src="yellow.jpg" alt="รูปสินค้า">
+		    <b>YELLOW SENTAI</b>
+			<p>฿0.1</p>
 			<s>฿1,000</s> -99.99%
 		</div>
 		<div class="box">
-			<img src="nay.jpg" alt="รูปสินค้า">
-		    <b>ยำยำยำยำ</b>
-			<p>฿15</p>
+			<img src="pink.jpg" alt="รูปสินค้า">
+		    <b>PINK SENTAI</b>
+			<p>฿1999</p>
 			<s>฿1,000</s> -99.99%
 		</div>
 	    <div class="box">
