--- a/lab3/clone-lazada.html
+++ b/lab3/clone-lazada.html
@@ -7,21 +7,25 @@
 			width: 100%;
 			height: 50px;
 			display: flex;
-			margin-left: 10px;
+			position: fixed;
+			background-color: white;
+			
 		}
 		.justforyou{
+			padding-top: 50px;
 			width: 100%;
             height: 70px;
             display: flex;
             justify-content: center;
-			background-color: rgb(233, 228, 228);
+			background-color: rgb(233, 230, 230);
 		}
 		.container {
+		
             width: 100%;
             height: 300px;
             display: flex;
             justify-content: center;
-			background-color: rgb(233, 228, 228);
+			background-color: rgb(233, 230, 230);
         }
 		.box {
 			border-radius: 8px;
@@ -32,7 +36,6 @@
 			display: inline-block;
 		}
 		.box img{
-			
 			max-width: 100%;
             max-height: 100%;
 			vertical-align: middle;
@@ -61,6 +64,7 @@
 <body>
 	<div class="header">
 		<img src="lazada.png" alt="โลโก้ Lazada">
+		
 	</div>
 
 	<div class="justforyou">
@@ -102,9 +106,75 @@
 	    
 	 
 	</div>
+	<div class="container">
+		
+		<div class="box">
+			<img src="blue.jpg" alt="รูปสินค้า">
+		    <b>BLUE SENTAI</b>
+			<p>฿98</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	    <div class="box">
+			<img src="green.jpg" alt="รูปสินค้า">
+		    <b>GREEN SENTAI</b>
+			<p>฿477</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+		<div class="box">
+			<img src="red.jpg" alt="รูปสินค้า">
+		    <b>RED SENTAI</b>
+			<p>฿995</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	    <div class="box">
+			<img src="yellow.jpg" alt="รูปสินค้า">
+		    <b>YELLOW SENTAI</b>
+			<p>฿0.1</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+		<div class="box">
+			<img src="pink.jpg" alt="รูปสินค้า">
+		    <b>PINK SENTAI</b>
+			<p>฿1999</p>
+			<s>฿1,000</s> -99.99%
+		</div>
+	    
+	 
+	</div>
+
+   <div class="container">
 	
-	
-	
+	<div class="box">
+		<img src="blue.jpg" alt="รูปสินค้า">
+		<b>BLUE SENTAI</b>
+		<p>฿98</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="green.jpg" alt="รูปสินค้า">
+		<b>GREEN SENTAI</b>
+		<p>฿477</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="red.jpg" alt="รูปสินค้า">
+		<b>RED SENTAI</b>
+		<p>฿995</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="yellow.jpg" alt="รูปสินค้า">
+		<b>YELLOW SENTAI</b>
+		<p>฿0.1</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="pink.jpg" alt="รูปสินค้า">
+		<b>PINK SENTAI</b>
+		<p>฿1999</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+</div>
 	
 </body>
 </html>
