--- a/lab3/clone-lazada.html
+++ b/lab3/clone-lazada.html
@@ -175,6 +175,38 @@
 		<s>฿1,000</s> -99.99%
 	</div>
 </div>
+<div class="container">
 	
+	<div class="box">
+		<img src="blue.jpg" alt="รูปสินค้า">
+		<b>BLUE SENTAI</b>
+		<p>฿98</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="green.jpg" alt="รูปสินค้า">
+		<b>GREEN SENTAI</b>
+		<p>฿477</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="red.jpg" alt="รูปสินค้า">
+		<b>RED SENTAI</b>
+		<p>฿995</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="yellow.jpg" alt="รูปสินค้า">
+		<b>YELLOW SENTAI</b>
+		<p>฿0.1</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+	<div class="box">
+		<img src="pink.jpg" alt="รูปสินค้า">
+		<b>PINK SENTAI</b>
+		<p>฿1999</p>
+		<s>฿1,000</s> -99.99%
+	</div>
+</div>
 </body>
 </html>
