--- a/lab3/1.html
+++ b/lab3/1.html
@@ -10,7 +10,7 @@
          width: unset;
          height: unset;
          padding: 20px;
-         border: 5px solid ;
+         border: 3px dotted ;
          border-color: black;
      }
      .box{
