--- a/lab3/1.html
+++ b/lab3/1.html
@@ -48,11 +48,11 @@
     <h2>inline</h2>
     
     <div class="SetBox">
-        <div style="display: inline; background-color: rgb(255, 0, 0);">Inline Text 1</div>
-        <div style="display: inline; background-color: rgb(255, 153, 0);">Inline Text 2</div>
-        <div style="display: inline; background-color: rgb(255, 251, 0);">Inline Text 3</div>
-        <div style="display: inline; background-color: rgb(9, 255, 1);">Inline Text 4</div>
-        <div style="display: inline; background-color: rgb(0, 255, 149);">Inline Text 5</div>
+        <div style="display: inline; background-color: rgb(255, 0, 0);">Inline Text 1 </div>
+        <div style="display: inline; background-color: rgb(255, 153, 0);">Inline Text 2 </div>
+        <div style="display: inline; background-color: rgb(255, 251, 0);">Inline Text 3 </div>
+        <div style="display: inline; background-color: rgb(9, 255, 1);">Inline Text 4 </div>
+        <div style="display: inline; background-color: rgb(0, 255, 149);">Inline Text 5 </div>
     </div>
 
     <h2>Block</h2>
@@ -146,14 +146,14 @@
                 <div style="
                   background-color: rgba(82, 248, 6, 0.862);
                   color: rgb(242, 9, 9);
-                  font-size: 32px;
+                  font-size: 64px;
                   text-align: center;
                   width: 300px;
                   margin: 0 auto;
                   margin-top: 200px;
                   transform: translateY(50%);
                 ">
-                WOWOWOW
+                WOWOW
                 </div>
             </div>
         </div>
