--- a/lab7/matching-game.html
+++ b/lab7/matching-game.html
@@ -66,9 +66,9 @@
     .card {
       border-radius: 8px;
       border: 3px solid;
-      width: 100px;
-      padding: 10px;
-      height: 150px;
+      width: 60px;
+      padding: 12px;
+      height: 110px;
       margin-left: 10px;
       margin-top: 10px;
       font-size: 36px;
@@ -80,12 +80,12 @@
 
     .face-down {
       color: rgb(255, 255, 255);
-      background-color: rgb(153, 149, 149);
+      background-color: rgb(7, 68, 22);
 
     }
 
     .card-title {
-
+    
       text-align: right;
       font-size: 30px;
       height: 20%;
@@ -98,53 +98,115 @@
     }
   </style>
   <script>
-    var cardList = [
-      { value: ['♣', 'A'], isFaceDown: true },
-      { value: ['♣', '2'], isFaceDown: false },
-      { value: ['♣', '3'], isFaceDown: true },
-      { value: ['♣', '4'], isFaceDown: false },
-      { value: ['♣', '5'], isFaceDown: true },
-      { value: ['♣', '6'], isFaceDown: true },
-      { value: ['♣', '7'], isFaceDown: true },
-      { value: ['♣', '8'], isFaceDown: false },
-      { value: ['♣', '9'], isFaceDown: true },
-      { value: ['♣', '10'], isFaceDown: true },
-      { value: ['♣', 'J'], isFaceDown: true },
-      { value: ['♣', 'Q'], isFaceDown: true },
-      { value: ['♣', 'K'], isFaceDown: false },
-      { value: ['♥', 'A'], isFaceDown: true },
-      { value: ['♥', '2'], isFaceDown: true },
-      { value: ['♥', '3'], isFaceDown: false },
-      { value: ['♥', '4'], isFaceDown: false },
-      { value: ['♥', '5'], isFaceDown: true },
-      { value: ['♥', '6'], isFaceDown: false },
-      { value: ['♥', '7'], isFaceDown: true },
-      { value: ['♥', '8'], isFaceDown: true },
-      { value: ['♥', '9'], isFaceDown: true },
-      { value: ['♥', '10'], isFaceDown: true },
-      { value: ['♥', 'J'], isFaceDown: true },
-      { value: ['♥', 'Q'], isFaceDown: true },
-      { value: ['♥', 'K'], isFaceDown: false },
+     var cardList = [
+        { value: ['♣', 'A'], isFaceDown: true },
+        { value: ['♣', '2'], isFaceDown: false },
+        { value: ['♣', '3'], isFaceDown: true },
+        { value: ['♣', '4'], isFaceDown: false },
+        { value: ['♣', '5'], isFaceDown: true },
+        { value: ['♣', '6'], isFaceDown: true },
+        { value: ['♣', '7'], isFaceDown: true },
+        { value: ['♣', '8'], isFaceDown: false },
+        { value: ['♣', '9'], isFaceDown: true },
+        { value: ['♣', '10'], isFaceDown: true },
+        { value: ['♣', 'J'], isFaceDown: true },
+        { value: ['♣', 'Q'], isFaceDown: true },
+        { value: ['♣', 'K'], isFaceDown: false },
+        { value: ['♥', 'A'], isFaceDown: true },
+        { value: ['♥', '2'], isFaceDown: true },
+        { value: ['♥', '3'], isFaceDown: false },
+        { value: ['♥', '4'], isFaceDown: false },
+        { value: ['♥', '5'], isFaceDown: true },
+        { value: ['♥', '6'], isFaceDown: false },
+        { value: ['♥', '7'], isFaceDown: true },
+        { value: ['♥', '8'], isFaceDown: true },
+        { value: ['♥', '9'], isFaceDown: true },
+        { value: ['♥', '10'], isFaceDown: true },
+        { value: ['♥', 'J'], isFaceDown: true },
+        { value: ['♥', 'Q'], isFaceDown: true },
+        { value: ['♥', 'K'], isFaceDown: false },
+        { value: ['♦', 'A'], isFaceDown: true },
+        { value: ['♦', '2'], isFaceDown: true },
+        { value: ['♦', '3'], isFaceDown: false },
+        { value: ['♦', '4'], isFaceDown: false },
+        { value: ['♦', '5'], isFaceDown: true },
+        { value: ['♦', '6'], isFaceDown: false },
+        { value: ['♦', '7'], isFaceDown: true },
+        { value: ['♦', '8'], isFaceDown: true },
+        { value: ['♦', '9'], isFaceDown: true },
+        { value: ['♦', '10'], isFaceDown: true },
+        { value: ['♦', 'J'], isFaceDown: true },
+        { value: ['♦', 'Q'], isFaceDown: true },
+        { value: ['♦', 'K'], isFaceDown: false },
+        { value: ['♠', 'A'], isFaceDown: true },
+        { value: ['♠', '2'], isFaceDown: true },
+        { value: ['♠', '3'], isFaceDown: false },
+        { value: ['♠', '4'], isFaceDown: false },
+        { value: ['♠', '5'], isFaceDown: true },
+        { value: ['♠', '6'], isFaceDown: false },
+        { value: ['♠', '7'], isFaceDown: true },
+        { value: ['♠', '8'], isFaceDown: true },
+        { value: ['♠', '9'], isFaceDown: true },
+        { value: ['♠', '10'], isFaceDown: true },
+        { value: ['♠', 'J'], isFaceDown: true },
+        { value: ['♠', 'Q'], isFaceDown: true },
+        { value: ['♠', 'K'], isFaceDown: false },
     ]
+
+    function randomCard(){
+        for (let i = cardList.length-1; i > 0; i--) {
+            var randomBoolean = Math.random() >= 0.5;
+            if(randomBoolean >= 0.5){
+                cardList[i].isFaceDown = true;
+            }else{
+                cardList[i].isFaceDown = false;
+            }
+            const j = Math.floor(Math.random() * (i+1));
+            const temp = cardList[i];
+            cardList[i] = cardList[j];
+            cardList[j] = temp;
+        }
+    }
+
+
     function htmlToElem(html) {
-      let temp = document.createElement('template');
-      html = html.trim(); // Never return a space text node as a result
-      temp.innerHTML = html;
-      return temp.content.firstChild;
+        let temp = document.createElement('template');
+        html = html.trim(); // Never return a space text node as a result
+        temp.innerHTML = html;
+        return temp.content.firstChild;
     }
 
     function renderCardList() {
-      // TODO: define cardZoneElm here
-      // before append any DOM(s), you need to clear all children of cardZoneElm
-      for (var idx = 0; idx < cardList.length; idx++) {
-        // TODO:
-        // if isFaceDown is true, create a card component with 'face-down' class
-        cardElm = htmlToElem(
-          '<div class="card ....">......</div>'
-        )
-        cardZoneElm.append(cardElm)
-      }
+        randomCard();
+        // TODO: define cardZoneElm here
+        const cardZoneElm = document.getElementsByClassName("card-zone");
+        // before append any DOM(s), you need to clear all children of cardZoneElm
+        cardZoneElm[0].innerHTML = "";
+        for (var idx = 0; idx < cardList.length; idx++) {
+            // TODO:
+            // if isFaceDown is true, create a card component with 'face-down' class
+            if (cardList[idx].isFaceDown === true) {
+                cardElm = htmlToElem(
+                    '<div class="card face-down"><div class="card-title"></div><div class="card-body">?</div></div>'
+                );
+                cardZoneElm[0].append(cardElm);
+            } else {
+                cardElm = htmlToElem(
+                    '<div class="card"><div class="card-title">' + cardList[idx].value[0] + '</div><div class="card-body">' + cardList[idx].value[1] + '</div></div>'
+                );
+                if (cardList[idx].value[0] == "♥" || cardList[idx].value[0] == "♦") {
+                    cardElm.style.color = "red";
+                    cardElm.style.border = "2px solid red";
+                }
+                cardZoneElm[0].append(cardElm);
+            }
+        }
     }
+    window.onload = function(){
+        renderCardList();
+        const buttonRandom = document.getElementsByClassName("new-game-button");
+        buttonRandom[0].addEventListener("click", renderCardList);
+    };
   </script>
 </head>
 
@@ -152,14 +214,7 @@
   <div class="board">
     <div class="board-content">
       <div class="card-zone">
-        <div class="card">
-          <div class="card-title">
-            ♣
-          </div>
-          <div class="card-body">
-            9
-          </div>
-        </div>
+        
         <div class="card">
           <div class="card-title">
             ♣
