--- a/lab7/matching-game.html
+++ b/lab7/matching-game.html
@@ -11,7 +11,7 @@
       bottom: 0;
       position: absolute;
       display: flex;
-      background-color: rgb(4, 55, 4);
+      background-color: rgb(8, 125, 8);
       border: 2.5px solid rgb(86, 82, 82);
       flex-direction: column;
       justify-content: space-between;
@@ -77,6 +77,7 @@
       background-color: white;
       display: inline-block;
       text-align: center;
+      
 
     }
 
@@ -100,10 +101,10 @@
   </style>
   <script>
      var cardList = [
-        { value: ['♣', 'A'], isFaceDown: true },
-        { value: ['♣', '2'], isFaceDown: false },
-        { value: ['♣', '3'], isFaceDown: true },
-        { value: ['♣', '4'], isFaceDown: false },
+        { value: ['♣', 'A'], },
+        { value: ['♣', '2'],  },
+        { value: ['♣', '3'],  },
+        { value: ['♣', '4'],  },
         { value: ['♣', '5'], isFaceDown: true },
         { value: ['♣', '6'], isFaceDown: true },
         { value: ['♣', '7'], isFaceDown: true },
